# neonutilities

./: .gitignore  LICENSE  README.md  __init__.py  environment.yml  setup.cfg  setup.py
api/: neon_download_functions.py
docs/: index.html
docs/_build/doctrees/: environment.pickle  index.doctree  ref_api.doctree
docs/_build/doctrees/api/: neonutilities.api.download_aop_files.doctree  neonutilities.api.download_data.doctree  neonutilities.api.get_instrument_data.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  ref_api.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/neonutilities/api/: neon_download_functions.html
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/api/: neonutilities.api.get_instrument_data.rst.txt
docs/_build/html/_static/: custom.css
docs/_build/html/api/: neonutilities.api.download_aop_files.html  neonutilities.api.download_data.html  neonutilities.api.get_instrument_data.html
docs/_source/: conf.py  index.rst  ref_api.rst
docs/_source/_static/: custom.css
docs/_source/api/: neonutilities.api.download_aop_files.rst  neonutilities.api.download_data.rst
docs/source/: index.rst
neonutilities/: __init__.py
neonutilities/api/: __init__.py  neon_download_functions.py
neonutilities/smfp/: __init__.py  pargap.py
smfp/: __init__.py  lidarFunctions.py  pargap.py  pargap_wb.py
