[metadata]
name = neonutilities
description = Retrieve data from the NEON API.
author = Alex Rojas
author_email = a.rojas8907@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platform = any
url = https://github.com/arojas314/neonutilities
project_urls =
    Source Code = https://github.com/arojas314/neonutilities
    Documentation = https://arojas314.github.io/neonutilities/
    Release Notes = https://github.com/arojas314/neonutilities/releases
    Bug Tracker = https://github.com/arojas314/neonutilities/issues
keywords =
    NEON
    Lidar
    Hyperspectral
    meteorology
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Ecology

[options]
packages = find:
include_package_data = True
setup_requires = setuptools_scm
python_requires = >=3.9
zip_safe = False
install_requires =
    numpy
    pandas
    shapely
    geopandas
    re

